  * backends/packaging-dpkg.py: Implement get_system_architecture() to return
    dpkg --print-architecture, add a shallo test case.
  * apport/report.py, add_package_info(): Rename key 'Architecture:' to
    'PackageArchitecture:' for clarity.
  * apport/report.py, add_os_info(): Add system architecture as
    'Architecture:' field.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 28 Feb 2007 10:54:43 +0100

apport (0.61) feisty; urgency=low

  * bin/apport:
    - Kernel 2.6.20-9 now sets CORE_REAL_RLIM to -1 instead of not setting it;
      handle this case correctly. (LP: #87065)
    - Add forgotten multiplication of CORE_REAL_RLIM with 1024, since ulimit
      sets kB, not bytes.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 27 Feb 2007 16:06:11 +0100

apport (0.60) feisty; urgency=low

  * gtk/apport-gtk.glade: Reintroduce window titles. Since the crash
    notifications are like alerts, title have been removed recently to comply
    with Gnome HIG standards, but then the user will get 'nameless window'
    buttons in the task bar. Let's have the smaller evil then. (LP: #87164)
  * apport/packaging.py: Add get_architecture() interface for determining the
    architecture of a particular package (which might not match the overall
    system architecture on multiarch-capable systems, e. g. an i386 Firefox
    package installed on amd64).
  * backends/packaging-dpkg.py: Implement get_architecture() and add test
    case.
  * apport/report.py, add_package_info(): Add Architecture: field.
    (LP: #87424)
  * apport/ui.py: Already mark report as seen when we load it, not just in the
    information collection thread. That way, reports will only be shown once
    on systems which have /var/crash mounted noatime, too. (LP: #85809)
  * apport/fileutils.py, mark_report_seen(): If os.utime() fails, and opening
    the report file for reading does not change the atime (happens with
    noatime mount option), don't throw an exception, just delete the report.